--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -1,11 +1,36 @@
+@font-face {
+  font-family: 'Roboto';
+  src: url('../fonts/Roboto-Medium.ttf') format('truetype');
+  font-weight: bold;
+}
+
+@font-face {
+  font-family: 'Roboto';
+  src: url('../fonts/Roboto-Regular.ttf') format('truetype');
+  font-weight: normal;
+}
+
 body {
   margin: 0;
   padding: 0;
-  font-family: sans-serif;
-  position: relative; }
+  font-family: 'Roboto';
+  position: relative;
+  font-weight: normal;
+}
 
-html, body {
-  height: 100%; }
+html,
+body {
+  height: 100%;
+}
 
 html {
-  box-sizing: border-box; }
+  box-sizing: border-box;
+}
+
+.grid {
+  margin: 0px 0px;
+}
+
+b {
+  font-weight: bold;
+}
