--- a/src/styles/NavigationBar.scss
+++ b/src/styles/NavigationBar.scss
@@ -1,41 +1,39 @@
-$height: 74px;
-
 .AppNavigationBar{
-	height: $height;
+	height: 74px;
 	background-color: #f9f9f9;
 	box-shadow: 1px 1px 3px 0 rgba(0, 0, 0, 0.1);
 
-	& .AppNavigationBar__option-col{
+    &__option-img{
+    	height: 25px;
+	    margin-top: 18px;
+    }
+
+    &__option-text{
+    	font-weight: bold;
+    	font-size: 14px;
+    	line-height: 1;
+    	margin-top: 5px;
+    }
+
+	&__option-col{
 		max-width: 120px;
 	    text-align: center;
-
-	    & .AppNavigationBar__option{
-	    	height: 100%;
-		    width: max-content;
-		    margin: 0 auto;
-		    padding: 0px 4px;
-		    color: #d9d9d9;
-
-		    & .AppNavigationBar__option-img{
-		    	height: 25px;
-			    margin-top: 18px;
-		    }
-	    }
-
-	    & .AppNavigationBar__option-text{
-	    	font-weight: bold;
-	    	font-size: 14px;
-	    	line-height: 1;
-	    	margin-top: 5px;
-	    }
 	}
 
-	.AppNavigationBar__option--selected{
+    &__option{
+    	height: 100%;
+	    width: max-content;
+	    margin: 0 auto;
+	    padding: 0px 4px;
+	    color: #d9d9d9;
+    }
+
+	&__option--is-selected{
 		border-bottom: 3px solid #125ac4;
 	}
 
-	.AppNavigationBar__option--selectable{
+	&__option--is-selectable{
 		cursor: pointer;
-		color: #125ac4 !important;
+		color: #125ac4;
 	}
 }
