--- a/src/styles/NavigationBar.css
+++ b/src/styles/NavigationBar.css
@@ -3,34 +3,31 @@
   background-color: #f9f9f9;
   box-shadow: 1px 1px 3px 0 rgba(0, 0, 0, 0.1);
 }
-.AppNavigationBar .AppNavigationBar__option-col {
+.AppNavigationBar__option-img {
+  height: 25px;
+  margin-top: 18px;
+}
+.AppNavigationBar__option-text {
+  font-weight: bold;
+  font-size: 14px;
+  line-height: 1;
+  margin-top: 5px;
+}
+.AppNavigationBar__option-col {
   max-width: 120px;
   text-align: center;
 }
-.AppNavigationBar .AppNavigationBar__option-col .AppNavigationBar__option {
+.AppNavigationBar__option {
   height: 100%;
   width: max-content;
   margin: 0 auto;
   padding: 0px 4px;
   color: #d9d9d9;
 }
-.AppNavigationBar
-  .AppNavigationBar__option-col
-  .AppNavigationBar__option
-  .AppNavigationBar__option-img {
-  height: 25px;
-  margin-top: 18px;
-}
-.AppNavigationBar .AppNavigationBar__option-col .AppNavigationBar__option-text {
-  font-weight: bold;
-  font-size: 14px;
-  line-height: 1;
-  margin-top: 5px;
-}
-.AppNavigationBar .AppNavigationBar__option--selected {
+.AppNavigationBar__option--is-selected {
   border-bottom: 3px solid #125ac4;
 }
-.AppNavigationBar .AppNavigationBar__option--selectable {
+.AppNavigationBar__option--is-selectable {
   cursor: pointer;
-  color: #125ac4 !important;
+  color: #125ac4;
 }
