--- a/src/styles/AppHeader.scss
+++ b/src/styles/AppHeader.scss
@@ -1,21 +1,25 @@
-$headerHeight: 74px;
+@import "./Constants.scss";
 
 .AppHeader {
-	height: $headerHeight;
-	background-color: #200344;
+    height: $headerHeight;
+    background-image: linear-gradient(to right, #0b3f9c, #2e58db);;
     margin: 0px 0px;
     color: white;
 
-    .AppHeader_logo {
+    &__logo {
         padding: 0 25px;
         margin: auto 0;
-        height: 47px;
+        height: 73px;
     }
 
-    .AppHeader_connect{
-    	position: relative;
-    	line-height: $headerHeight;
-    	padding-left: 10px;
-    	height: max-content;
+    &__exchange-rate{
+        line-height: $headerHeight;
+        font-size: 14px;
+    }
+
+    &__exchange-rate--is-loading{
+        float: left;
+        top: 27px;
+        position: relative;
     }
 }
