Changed scss naming and removed usage of console.log

--- a/src/styles/ExplorePage.scss
+++ b/src/styles/ExplorePage.scss
@@ -4,7 +4,7 @@
   	max-width: 1370px;
  	margin: 0 auto;
 
-	& .explorePage__category
+	&__category
 	{
 		width: 312px;
 	    margin: 0px 15px 30px 15px;
