--- a/src/styles/Asset.scss
+++ b/src/styles/Asset.scss
@@ -1,40 +1,38 @@
 $imageHeight: 196px;
-$imageWidth: 312px;
 
-.asset
-	{
-	width: 312px;
-	height: 298px;
-    margin: 0px 15px 30px 15px;
+.asset{
+    margin-bottom: 30px;
     padding: 0px;
-    box-shadow: 0 1px 2px 0 rgba(0, 0, 0, 0.1);
     position: relative;
 
-    & .asset__image-holder{
+    &__container{
+    	width: 90%;
+		height: 298px;
+		box-shadow: 0 1px 2px 0 rgba(0, 0, 0, 0.1);
+		margin: 0 auto;
+	}
 
+	&__image-holder{
+		background-size: cover;
+		background-position: center;
+		height: $imageHeight;
     	position: relative;
     	
-    	& .asset__image-holder-gradient{
+		&-gradient{
     		position: absolute;
     		top: 0px;
     		height: $imageHeight;
-    		width: $imageWidth;
-			background-image: linear-gradient(to top, rgba(0, 0, 0, 0.6) 1%, transparent 46%);
+    		width: 100%;
+			background-image: linear-gradient(to top, rgba(0, 0, 0, 0.6), transparent 66px);
     	}
 
-    	& .asset__image-holder-location-icon{
+    	&-location-icon{
     		position: absolute;
 		    bottom: 18px;
 		    left: 21px;
     	}
 
-		& .asset__image-holder-image{
-		    height: $imageHeight;
-	    	width: $imageWidth;
-	    	object-fit: cover;
-		}
-
-		& .asset__image-holder-name{
+		&-name{
 			position: absolute;
 			bottom: 42px;
 			font-size: 18px;
@@ -42,7 +40,7 @@ $imageWidth: 312px;
 			left: 21px;
 		}
 
-		& .asset__image-holder-location{
+		&-location{
 			position: absolute;
 			bottom: 17px;
 			font-size: 14px;
@@ -51,33 +49,34 @@ $imageWidth: 312px;
 		}
     }
 
-    & .asset__details{
+    &__details{
+
     	padding: 5px 10px 0px 10px;
 
-		& .asset__details-funded{
+		&-funded{
 			width: max-content;
 	   	 	float: left;
 	    	font-size: 14px;
 		}
 
-		& .asset__details-goal{
+		&-goal{
 	    	text-align: right;
 	    	font-size: 14px;
 		}
 
-		& .asset__details-progress-bar{
+		&-progress-bar{
 			width: 100%;
 			height: 4px;
 			background-color: #d8d8d8;
 			margin-top: 5px;
 		}
 
-		& .asset__details-progress-bar-fill{
+		&-progress-bar-fill{
 			background-image: linear-gradient(272deg, #3ecd5d, #2db84b);
 			height: 4px;
 		}
 
-		& .asset__details-contribute{
+		&-contribute{
 			background-image: linear-gradient(to right, #3ecd5d, #2db84b);
 		    margin-top: 15px;
 		    height: 32px;
