--- a/src/styles/ExploreAssetsPage.scss
+++ b/src/styles/ExploreAssetsPage.scss
@@ -1,19 +1,36 @@
 .exploreAssetsPage{
 	width: 100%;
 	margin: 0px;
-  	max-width: 1370px;
+  	max-width: 1400px;
  	margin: 0 auto;
- 	padding-top: 53px;
+ 	position: relative;
+ 	padding-top: 55px;
 
-	& .exploreAssetsPage__back-button{
+ 	&--is-loading{
+ 		margin: 0 auto;
+ 	}
+
+ 	&-loading-message{
+ 		text-align: center;
+ 		font-size: 26px;
+ 	}
+
+	&__back-button{
 		position: absolute;
-		top: -42px;
+		top: 11px;
 		height: 32px;
 		width: 112px;
 		border: solid 2px #125ac4;
 		font-weight: bold;
 		font-family: 'Roboto';
 		color: #125ac4;
+		left: 18px;
+	}
+
+	&__message-no-elements{
+		text-align: center;
+		font-size: 20px;
+	    padding-top: 70px;
 	}
 
 }
