--- a/src/styles/ExplorePage.scss
+++ b/src/styles/ExplorePage.scss
@@ -6,10 +6,11 @@
  	padding-top: 50px;
 
 	&__category
-	{	
+	{
 	    margin: 0px 0px 30px 0px;
 	    padding: 0px;
 	    height: 310px;
+      text-decoration: none;
 
 	    &-name{
 	    	width: 100%;
