--- a/src/styles/NavigationBar.scss
+++ b/src/styles/NavigationBar.scss
@@ -17,7 +17,8 @@
 
 	&__option-col{
 		max-width: 120px;
-	    text-align: center;
+    text-align: center;
+    text-decoration: none;
 	}
 
     &__option{
