--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -23,6 +23,8 @@ body {
   position: relative;
   font-weight: normal;
   background-color: #ffffff;
+  overflow-y: hidden;
+  overflow-x: hidden;
 }
 
 html, body {
