--- a/src/styles/NotFoundPage.scss
+++ b/src/styles/NotFoundPage.scss
@@ -5,17 +5,25 @@
   flex-direction: column;
   justify-content: center;
   align-items: center;
+  position: fixed;
+  top: 165px;
+  height: calc(100vh - 165px);
+  width: 100%;
+  left:0px;
+  overflow: hidden;
+  z-index: -1;
 
   &__image{
-    width: 90%;
-    max-width: 700px;
+    width: 70%;
+    margin-top: -220px;
 
     @include media('>=tablet') {
         width: 55%;
+        max-width: 400px;
     }
 
     @include media('>=desktop') {
-        width: 30%;
+        max-width: 400px;
     }
   }
 
@@ -46,8 +54,7 @@
     position: absolute;
     z-index: -1;
     right: -370px;
-    height: 110%;
-    top: 102px;
+    height: 130%;
     display: none;
     @include media('>=desktop') {
        display: block;
@@ -68,4 +75,7 @@
        display: block;
     }
   }
+
 }
+
+
