--- a/src/styles/NotFoundPage.scss
+++ b/src/styles/NotFoundPage.scss
@@ -1,10 +1,6 @@
 @import 'include-media/dist/_include-media.scss';
 
 .NotFoundPage{
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
   position: fixed;
   top: 166px;
   height: calc(100vh - 166px);
@@ -12,17 +8,30 @@
   left:0px;
   overflow: hidden;
 
+  &__wrapper{
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    position: absolute;
+    top: 80px;
+
+    @include media('>=tablet') {
+        top: 120px;
+    }
+  }
+
   &__image{
     width: 70%;
-    margin-top: -220px;
 
     @include media('>=tablet') {
         width: 55%;
-        max-width: 400px;
+        max-width: 360px;
     }
 
     @include media('>=desktop') {
-        max-width: 400px;
+        max-width: 360px;
     }
   }
 
@@ -30,10 +39,9 @@
     font-size: 30px;
     font-weight: 800;
     color: #125ac4;
-    margin-top: -10px;
+    margin-top: 20px;
     @include media('>=tablet') {
         font-size: 80px;
-        margin-top: -40px;
     }
   }
 
