--- a/src/styles/NotFoundPage.scss
+++ b/src/styles/NotFoundPage.scss
@@ -64,6 +64,7 @@
     right: -370px;
     height: 130%;
     display: none;
+    top: -70px;
     @include media('>=desktop') {
        display: block;
     }
