carbon design and hunting for the best pattern;  metamask detection modal; carbon limitations;

--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -93,3 +93,26 @@ b{
     background-color: #125ac4;
   }
 }
+
+
+// Carbon Theme Variables
+// $edited: false;
+// $brand-01: #df004e;
+// $brand-02: #24c03b;
+// $brand-03: #41d6c3;
+// $inverse-01: #070707;
+// $inverse-02: #272d33;
+// $ui-01: #ffffff;
+// $ui-02: #f4f7fb;
+// $ui-03: #dfe3e6;
+// $ui-04: #8897a2;
+// $ui-05: #5a6872;
+// $text-01: #152934;
+// $text-02: #5a6872;
+// $text-03: #cdd1d4;
+// $field-01: #f4f7fb;
+// $field-02: #ffffff;
+// $support-01: #e71d32;
+// $support-02: #5aa700;
+// $support-03: #efc100;
+// $support-04: #5aaafa;
