--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -96,23 +96,57 @@ b{
 
 
 // Carbon Theme Variables
-// $edited: false;
-// $brand-01: #df004e;
-// $brand-02: #24c03b;
-// $brand-03: #41d6c3;
-// $inverse-01: #070707;
-// $inverse-02: #272d33;
-// $ui-01: #ffffff;
-// $ui-02: #f4f7fb;
-// $ui-03: #dfe3e6;
-// $ui-04: #8897a2;
-// $ui-05: #5a6872;
-// $text-01: #152934;
-// $text-02: #5a6872;
-// $text-03: #cdd1d4;
-// $field-01: #f4f7fb;
-// $field-02: #ffffff;
-// $support-01: #e71d32;
-// $support-02: #5aa700;
-// $support-03: #efc100;
-// $support-04: #5aaafa;
+$edited: true;
+$brand-01: #125ac4;
+$brand-02: #001358;
+$brand-03: #24f281;
+$inverse-01: #ffffff;
+$inverse-02: #272d33;
+$ui-01: #ffffff;
+$ui-02: #f9f9f9;
+$ui-03: #d9d9d9;
+$ui-04: #868686;
+$ui-05: #575756;
+$text-01: #152934;
+$text-02: #575756;
+$text-03: #d9d9d9;
+$field-01: #f9f9f9;
+$field-02: #ffffff;
+$support-01: #f93549;
+$support-02: #2db84b;
+$support-03: #efc100;
+$support-04: #1991eb;
+$nav-01: #1b2834;
+$nav-02: #1c496d;
+$use-layer: true;
+$input-border: 1px solid transparent;
+$button-font-weight: 700;
+$button-font-size: .875rem;
+$button-border-radius: 0;
+$button-height: 40px;
+$button-padding: 0 1rem;
+$button-padding-sm: 0 .5rem;
+$button-border-width: 2px;
+$accordion-flex-direction: row;
+$accordion-justify-content: flex-start;
+$accordion-arrow-margin: 0 0 0 .25rem;
+$accordion-title-margin: 0 0 0 1rem;
+$accordion-content-padding: 0 1rem 0 1.75rem;
+$checkbox-border-width: 2px;
+$snippet-background-color: $field-01;
+$content-switcher-border-radius: 8px;
+$content-switcher-option-border: 1px solid $brand-01;
+$data-table-heading-transform: uppercase;
+$data-table-heading-border-bottom: 1px solid $brand-01;
+$data-table-row-height: 2rem;
+$modal-border-top: $brand-01 4px solid;
+$modal-footer-background-color: $ui-03;
+$progress-indicator-bar-width: 1px inset transparent;
+$progress-indicator-stroke-width: 5;
+$progress-indicator-line-offset: .625rem;
+$radio-border-width: 2px;
+$structured-list-padding: 2rem;
+$structured-list-text-transform: uppercase;
+$input-label-weight: 700;
+$card-text-align: center;
+$card-flex-align: center;
