--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -16,6 +16,12 @@
     font-weight: bold;
 }
 
+@font-face {
+    font-family: 'Gilroy';
+    src: url('../fonts/Gilroy-Extrabold.otf') format('opentype');
+    font-weight: 900;
+}
+
 body {
   margin: 0;
   padding: 0;
@@ -30,6 +36,10 @@ html, body {
 
 html {
   box-sizing: border-box; }
+
+p{
+  letter-spacing: normal !important;
+}
 
 .grid{
   margin-left: 0px !important;
