--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -16,6 +16,12 @@
     font-weight: bold;
 }
 
+@font-face {
+  font-family: 'gilroy-extrabold';
+  src: url('../fonts/gilroy-extrabold.otf') format('truetype');
+  font-weight: bold;
+}
+
 body {
   margin: 0;
   padding: 0;
