--- a/src/styles/MetamaskAudit.scss
+++ b/src/styles/MetamaskAudit.scss
@@ -10,20 +10,70 @@
   margin-top: 1rem;
 }
 
+.bx--modal-close {
+  top: 0.4rem;
+  right: 0.6rem;
+}
+
 .bx--modal-close__icon {
   fill: #2e58db;
+  width: 1.5rem;
+  height: 1.5rem;
 }
+
+
+// BUTTONS
+.bx--btn--primary {
+  background-color: #2e58db;
+  font-family: 'Roboto';
+
+  &:hover {
+    background-color: #2e58db;
+  }
+  &:active {
+    border: #2e58db;
+  }
+  &:visited {
+    border: #2e58db;
+    background-color: #2e58db;
+  }
+}
+
+.bx--btn--secondary {
+  border-color: #2e58db;
+  color: #2e58db;
+  font-family: 'Roboto';
+
+  &:hover {
+    background-color: #2e58db;
+  }
+}
+
+.bx--btn--ghost {
+  color: #2e58db;
+  font-family: 'Roboto';
+  font-weight: 200;
+
+  &:hover {
+    background-color: #2e58db;
+    border: none;
+  }
+}
+// end of BUTTONS
+
+
 // end of carbon override
 
 .MetamaskAudit {
     border-top: none;
 
     &__title {
-      font-size: 18px;
+      font-size: 1.1rem;
       font-family: 'gilroy-extrabold';
       color: rgba(0, 0, 0, 0.75);
-      font-weight: 800;
+      font-weight: 700;
       text-align: center;
+      line-height: 1.5rem;
     }
 
     &__metamaskfox-image {
@@ -36,16 +86,16 @@
     }
 
     &__metamaskinstall-button, &__metamaskfriendlyguide-link {
-      width: 80%;
-      margin-left: 10%;
-      margin-right: 10%;
+      width: 86%;
+      margin-left: 7%;
+      margin-right: 7%;
       margin-bottom: 10px;
     }
 
     &__metamaskmanual-button {
-      width: 80%;
-      margin-left: 10%;
-      margin-right: 10%;
+      width: 86%;
+      margin-left: 7%;
+      margin-right: 7%;
     }
 
     &__metamaskfriendlyguide-link {
