updates to explore page so images don't shrink (not mobile ready)

--- a/src/styles/ExplorePage.scss
+++ b/src/styles/ExplorePage.scss
@@ -1,36 +1,46 @@
 .ExplorePage{
 	width: 100%;
 	margin: 0px;
-  	max-width: 1370px;
+  max-width: 1370px;
  	margin: 0 auto;
  	padding-top: 50px;
 
+  &__container{
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: left;
+  }
+
 	&__category
 	{
-	    margin: 0px 0px 30px 0px;
+	    margin: 0px 15px 30px 15px;
 	    padding: 0px;
 	    height: 310px;
       text-decoration: none;
+      width: 310px;
 
 	    &-name{
 	    	width: 100%;
 	    	text-align: center;
-	    	font-size: 27px;
-  			font-weight: 800;
+	    	font-size: 36px;
+	      font-family: 'Gilroy';
+        font-weight: 900;
   			color: #ffffff;
   			text-shadow: 1px 1px 3px rgba(0, 0, 0, 0.5);
-  			top: 65%;
   			position: relative;
   			padding: 0px 10px;
 	    }
 	}
+
 	&__image-container{
-		width: 90%;
+		width: 100%;
 		margin: 0 auto;
 		height: 310px;
 		background-size: cover;
 		background-position: center;
 		cursor: pointer;
+    display: flex;
+    align-items: center;
 	}
 }
 
