fixed font family usage

--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -19,7 +19,7 @@
 @font-face {
     font-family: 'Gilroy';
     src: url('../fonts/Gilroy-Extrabold.otf') format('opentype');
-    font-weight: 900;
+    font-weight: bold;
 }
 
 body {
