--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -16,6 +16,12 @@
     font-weight: bold;
 }
 
+@font-face {
+    font-family: 'Gilroy';
+    src: url('../fonts/Gilroy-Extrabold.otf') format('opentype');
+    font-weight: bold;
+}
+
 body {
   margin: 0;
   padding: 0;
