font path corrected;

--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -18,7 +18,7 @@
 
 @font-face {
     font-family: 'Gilroy';
-    src: url('../fonts/Gilroy-Extrabold.otf') format('opentype');
+    src: url('../fonts/gilroy-extrabold.otf') format('opentype');
     font-weight: bold;
 }
 
