--- a/src/styles/HelpPage.scss
+++ b/src/styles/HelpPage.scss
@@ -12,11 +12,20 @@
     font-size: 48px;
   }
 
-  &__desc{
+  &__desc, &__faucet-text{
     max-width: 1020px;
     margin: 0 auto;
-    font-size: 24px;
+    font-size: 20px;
     margin-top: 30px;
+  }
+
+  &__faucet-text{
+    margin-bottom: 10px;
+    margin-top: 20px;
+  }
+
+  &__faucet-status-text{
+    margin-top: 10px;
   }
 
   &__navigation{
