--- a/src/styles/ExplorePage.scss
+++ b/src/styles/ExplorePage.scss
@@ -8,7 +8,7 @@
   &__container{
     display: flex;
     flex-wrap: wrap;
-    justify-content: left;
+    justify-content: center;
   }
 
 	&__category
