added temporary fix to round numbers and disabled some values in the contribution popup

--- a/src/styles/ConfirmationPopup.scss
+++ b/src/styles/ConfirmationPopup.scss
@@ -34,6 +34,10 @@
     font-size: 15px;
     font-weight: 700;
     color: black;
+
+    &--is-inactive{
+      color: #d9d9d9;
+    }
   }
 
   &__description-amount-right{
@@ -42,6 +46,10 @@
     font-size: 14px;
     font-weight: bold;
     color: black;
+
+    &--is-inactive{
+      color: #d9d9d9;
+    }
   }
 
   &__line{
