--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -32,7 +32,9 @@ body {
 }
 
 html, body {
-  height: 100%; }
+  height: 100%; 
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;}
 
 html {
   box-sizing: border-box; }
