late hours paintin and styling

--- a/src/styles/AssetDetailsPage.scss
+++ b/src/styles/AssetDetailsPage.scss
@@ -10,13 +10,8 @@
   }
 
   &__back-button{
-    top: 11px;
-    height: 32px;
-    width: 112px;
-    border: solid 2px #125ac4;
-    font-weight: bold;
-    font-family: 'Roboto';
-    color: #125ac4;
-    margin-top: 10px;
+    margin-top: 22px;
+		padding-left: 45px;
+		padding-right: 45px;
   }
 }
