--- a/src/styles/ExplorePage.scss
+++ b/src/styles/ExplorePage.scss
@@ -20,9 +20,11 @@
       width: 310px;
 
 	    &-name{
-	    	width: 100%;
+				width: 98%;
+				margin: 0 auto;
 	    	text-align: center;
-	    	font-size: 36px;
+				font-size: 36px;
+				line-height: 42px;
 	      font-family: 'Gilroy';
         font-weight: 900;
   			color: #ffffff;
