--- a/src/styles/Asset.scss
+++ b/src/styles/Asset.scss
@@ -25,7 +25,7 @@ $imageHeight: 196px;
     		height: $imageHeight;
 			width: 100%;
 			
-			background-image: linear-gradient(to left, #24F281, #0083FF) !important;
+			background-image: linear-gradient(to left, #0b3f9c, #0083FF) !important;
     	}
 
     	&-location-icon{
