asset detailsimage box;

--- a/src/styles/AssetDetails.scss
+++ b/src/styles/AssetDetails.scss
@@ -163,6 +163,7 @@
       background: linear-gradient(to left, #24F281, #0083FF);
       
       min-width: 100%;
+      max-width: 100%;
       min-height: 500px;
     }
 
