--- a/src/styles/AppHeader.scss
+++ b/src/styles/AppHeader.scss
@@ -2,7 +2,7 @@
 
 .AppHeader {
     height: $headerHeight;
-    background-image: linear-gradient(to right, #0b3f9c, #2e58db);;
+    background-image: linear-gradient(64deg, #001358, #125ac4);
     margin: 0px 0px;
     color: white;
 
@@ -21,5 +21,8 @@
         float: left;
         top: 27px;
         position: relative;
+    }
+    &__tokenprice-label {
+        line-height: 22px;
     }
 }
