--- a/src/styles/AppHeader.scss
+++ b/src/styles/AppHeader.scss
@@ -6,10 +6,23 @@
     margin: 0px 0px;
     color: white;
     overflow: hidden;
+    position: relative;
+
+    &__logo-and-info{
+      display: flex;
+      align-items: center;
+      float: left;
+      height: 100%;
+    }
 
     &__Logo-contaner {
       display: inline-block;
       padding-right: 65px;
+
+      & svg{
+        height: 100%;
+        width: 100%;
+      }
     }
 
     &__logo {
@@ -26,9 +39,7 @@
     }
 
     &__exchange-rate--is-loading{
-        // float: left;
-        top: 27px;
-        position: relative;
+      margin: 0 auto;
     }
     &__tokenprice-label {
         margin: 0;
@@ -37,5 +48,7 @@
     }
     &__rate-container {
         display: inline-block;
+        height: 100%;
+        display: flex;
     }
 }
