eplore assets new grid, part

--- a/src/styles/Asset.scss
+++ b/src/styles/Asset.scss
@@ -1,16 +1,16 @@
 $imageHeight: 196px;
 
 .Asset{
-    margin-bottom: 30px;
-    padding: 0px;
-    position: relative;
+    // margin-bottom: 30px;
+    // padding: 0px;
+    // position: relative;
     width: 325px;
 
     &__container{
-      width: 90%;
-    height: 298px;
+    //   width: 90%;
+    // height: 298px;
     box-shadow: 0 1px 2px 0 rgba(0, 0, 0, 0.1);
-    margin: 0 auto;
+    // margin: 0 auto;
   }
 
   &__image-holder{
