explore page new grid

--- a/src/styles/ExplorePage.scss
+++ b/src/styles/ExplorePage.scss
@@ -1,8 +1,8 @@
 .ExplorePage{
-	width: 100%;
-	margin: 0px;
-  max-width: 1370px;
- 	margin: 0 auto;
+	// width: 100%;
+	// margin: 0px;
+  // max-width: 1370px;
+ 	// margin: 0 auto;
  	padding-top: 60px;
 
   &__container{
