--- a/src/styles/Asset.scss
+++ b/src/styles/Asset.scss
@@ -4,7 +4,8 @@ $imageHeight: 196px;
     // margin-bottom: 30px;
     // padding: 0px;
     // position: relative;
-    width: 325px;
+    // width: 325px;
+    padding: 15px;
 
     &__container{
     //   width: 90%;
