--- a/src/styles/Asset.scss
+++ b/src/styles/Asset.scss
@@ -79,12 +79,12 @@ $imageHeight: 196px;
         font-size: 14px;
     }
 
-    &-progress-bar{
-      width: 100%;
-      height: 4px;
-      background-color: #d8d8d8;
-      margin-top: 5px;
-    }
+    // &-progress-bar{
+    //   width: 100%;
+    //   height: 4px;
+    //   background-color: #d8d8d8;
+    //   margin-top: 5px;
+    // }
 
     &-progress-bar-fill{
       background-image: linear-gradient(272deg, #3ecd5d, #2db84b);
