--- a/src/styles/ExplorePage.scss
+++ b/src/styles/ExplorePage.scss
@@ -8,7 +8,9 @@
   &__container{
     display: flex;
     flex-wrap: wrap;
-    justify-content: left;
+		justify-content: left;
+
+
   }
 
 	&__category
@@ -17,7 +19,9 @@
 	    padding: 0px;
 	    height: 310px;
       text-decoration: none;
-      width: 310px;
+			width: 100%;
+			
+			height: 240px;
 
 	    &-name{
 				width: 98%;
@@ -37,7 +41,7 @@
 	&__image-container{
 		width: 100%;
 		margin: 0 auto;
-		height: 310px;
+		height: 240px;
 		background-size: cover;
 		background-position: center;
 		cursor: pointer;
