--- a/src/styles/ExplorePage.scss
+++ b/src/styles/ExplorePage.scss
@@ -9,8 +9,7 @@
     display: flex;
     flex-wrap: wrap;
 		justify-content: left;
-
-
+		padding: 0;
   }
 
 	&__category
@@ -24,7 +23,7 @@
 			height: 240px;
 
 	    &-name{
-				width: 98%;
+				width: 95%;
 				margin: 0 auto;
 	    	text-align: center;
 				font-size: 36px;
