--- a/src/styles/AssetDetails.scss
+++ b/src/styles/AssetDetails.scss
@@ -15,6 +15,7 @@
     &-contribute-btn{
       width: 100%;
       margin-top: 30px;
+      height: 40px;
 
       &:focus, &:hover, &:active{
       }
@@ -99,6 +100,7 @@
       font-weight: 500;
       color: #383838;
       text-align: left;
+      margin: 0;
     }
 
     &-funding-value{
@@ -110,8 +112,9 @@
 
     &-calculate-title{
       font-weight: 700;
-      margin-top: 40px;
+      margin-top: 50px;
       font-size: 20px;
+      margin-bottom: 50px;
     }
 
     &-slider-min{
@@ -133,16 +136,17 @@
     }
 
     &-separator{
-      height: 31px;
-      border-right: 1px solid black;
+      height: 11px;
+      border-right: 1px solid #dddddd;
       display: inline-block;
       position: relative;
-      top: 9px;
+      top: 1px;
       margin-right: 10px;
     }
 
     &-contribution-value{
-      color: #125ac4;
+      color: black;
+      display: inline;
     }
 
     &-contribution-bordered{
@@ -152,7 +156,7 @@
 
     &-ownership{
       font-size: 18px;
-      padding-top: 20px;
+      padding-top: 0px;
       padding-right: 10px;
     }
 
