--- a/src/styles/Address.scss
+++ b/src/styles/Address.scss
@@ -1,37 +1,36 @@
 .Address{
-  left: 100%;
-  transform: translate(-100%, 0%);  padding-right: 20px;
-  position: absolute;
   height: 100%;
+  margin-right: 20px;
+  margin-left: 20px;
 
-    &__loader{
-      display: flex;
+  &__loader{
+    display: flex;
+    position: relative;
+    justify-content: center;
+    align-items: center;
+    width: max-content;
+    height: 100%;
+  }
+
+  &__text{
+      font-size: 14px;
+      text-overflow: ellipsis;
+      overflow: hidden;
+      white-space: nowrap;
+      width: 75px;
+      line-height: 1;
+      margin: 0px 0px;
       position: relative;
-      justify-content: center;
-      align-items: center;
-      width: max-content;
-      height: 100%;
-    }
+      margin-left: 15px;
+  }
 
-    &__text{
-        font-size: 14px;
-        text-overflow: ellipsis;
-        overflow: hidden;
-        white-space: nowrap;
-        width: 75px;
-        line-height: 1;
-        margin: 0px 0px;
-        position: relative;
-        margin-left: 15px;
-    }
-
-    &__jazz-n-hex {
-      height: 90px;
-      display: flex;
-      flex-direction: row;
-      justify-content: center;
-      align-items: center;
-    }
+  &__jazz-n-hex {
+    height: 90px;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+  }
 }
 
 .AppHeader .paper{
