--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -3,13 +3,13 @@
 @font-face {
     font-family: 'Roboto';
     src: url('../fonts/Roboto-Medium.ttf') format('truetype');
-    font-weight: medium;
+    font-weight: 500;
 }
 
 @font-face {
     font-family: 'Roboto';
     src: url('../fonts/Roboto-Regular.ttf') format('truetype');
-    font-weight: normal;
+    font-weight: 400;
 }
 
 @font-face {
