--- a/src/styles/Asset.scss
+++ b/src/styles/Asset.scss
@@ -61,6 +61,7 @@ $imageHeight: 196px;
         color: #ffffff;
         padding-left: 42px;
         z-index: 1;
+        margin: 0;
       }
     }
 
