--- a/src/styles/PortfolioPage.scss
+++ b/src/styles/PortfolioPage.scss
@@ -1,93 +1,66 @@
+@import 'include-media/dist/_include-media.scss';
+
 .Portfolio{
 
   padding-top: 50px;
 
-  &__tile-expandable{
-      width: 283px;
-
-      &:focus{
-        outline: none;
-      }
-
-      & .bx--tile__chevron:focus{
-        outline: none;
-      }
-  }
-
-  &__tile{
-    height: 78px;
+  &__cards{
     display: flex;
-    justify-content: space-evenly;
-    align-items: center;
+    margin-left: 20px;
+    margin-bottom: 20px;
 
-    & div{
-      width: 70%;
+    @include media('<tablet') {
+      flex-direction: column;
     }
   }
 
-  &__empty {
-    color: #575757;
-    background-color: #f5f7fa;
-    text-align: right;
-    font-size: 16px;
-    //Warrning! Hacks! moving from carbon
-    line-height: 22px !important;
-    padding-top: 22px !important;
-    padding-bottom: 22px !important;
-    padding-right: 31px !important;
-  }
-
-  & .bx--tile-content__below-the-fold .Portfolio__tile:nth-child(odd){
-    background-color: #f5f7fa;
-  }
-
-  &__tile-img{
-    height: 27px;
-    width: 30px;
-  }
-
-  & .bx--tile--expandable{
+  &__card{
+    border-radius: 4px;
     background-color: #ffffff;
-    padding:  0px 0px;
-  }
-
-  & .bx--tile__chevron svg{
-    fill: #125ac4;
-  }
-
-  & p{
-    padding: 2px 0px;
-    margin: 0px 0px;
-    color: #575757;
-    line-height: 0.9;
-  }
-
-  & b{
-    color: #125ac4;
-  }
-
-  &__revenue{
-    margin-left: 30px;
-  }
-
-  &__revenue b{
-    color: #2db84b;
-  }
-
-  &__wrapper{
+    box-shadow: 0 4px 12px 0 rgba(0, 0, 0, 0.15);
+    padding: 10px;
+    margin-right: 30px;
     display: flex;
+    align-items: center;
+    width: max-content;
+
+    &:nth-child(2){
+      @include media('<tablet') {
+        margin-top: 20px;
+      }
+    }
+
+    b{
+      font-weight: 500;
+      color: rgba(0, 0, 0, 0.65);
+    }
+
+    &-value--is-green{
+      color: #2db84b !important;
+    }
+
+    &-separator{
+      background-color: rgba(0, 0, 0, 0.09);
+      width: 1px;
+      height: 14px;
+      display: inline-block;
+      margin: 0px 7px;
+    }
+
+    img{
+      width: 22px;
+      height: 22px;
+      margin-right: 10px;
+    }
   }
-}
 
-
-@media only screen and (max-width: 695px) {
-    .Portfolio__wrapper {
-        flex-direction: column;
-        align-items: center;
-    }
-
-    .Portfolio__revenue{
-      margin-left: 0px;
-      margin-top: 30px;
-    }
+  &__assets{
+    position: relative;
+    margin-left: 0;
+    margin-right: 0;
+    height: auto;
+    zoom: 1;
+    display: block;
+    box-sizing: border-box;
+  }
 }
