price change percentage red when negative

--- a/src/styles/AppHeader.scss
+++ b/src/styles/AppHeader.scss
@@ -54,9 +54,12 @@
       margin: 0 auto;
     }
     &__tokenprice-label {
-        margin: 0;
-        font-size: 14px;
+      margin: 0;
+      font-size: 14px;
 
+      &--is-red{
+        color: red !important;
+      }
     }
     &__rate-container {
         display: inline-block;
