changes to landing page

--- a/src/styles/LandingPage.scss
+++ b/src/styles/LandingPage.scss
@@ -138,9 +138,9 @@
 
     &-subTitle{
       font-size: 18px;
-      color: #1890ff;
+      color: #4a4a4a;
       margin-bottom: 20px;
-      font-weight: medium;
+      font-weight: 500;
     }
 
     &-guide{
