View Asset to antd

--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -54,17 +54,17 @@ b{
   padding: 0px 20px 0px 20px;
 }
 
-.bx--btn--primary{
-  border: none !important;
+// .bx--btn--primary{
+//   border: none !important;
 
-  &:hover,
-  &:active,
-  &:focus
-  {
-    border: transparent !important;
-    outline: none !important;
-  }
-}
+//   &:hover,
+//   &:active,
+//   &:focus
+//   {
+//     border: transparent !important;
+//     outline: none !important;
+//   }
+// }
 
 .ant-menu-submenu-popup{
   z-index: 3 !important;
